--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello Prakash</title>
+    <title>Hello Aruna</title>
   </head>
   <body>
-    <h1>Hello Prakash</h1>
+    <h1>Hello Aruna</h1>
   </body>
 </html>
